<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/accueil"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.cbs.cbs.activities.RenseignerAdresseActivity"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/custom_background_group"
        android:padding="20dp">

        <TextView
        android:id="@+id/titreRenseignerAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titreRenseignerAdresse"
        android:textSize="30sp" />

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDefaultAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textDefaultAdresse" />

        <TextView
            android:id="@+id/defaultAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="90pt"
        tools:context=".activities.RenseignerAdresseActivity" />

        <Button
        android:id="@+id/btnModifierAdresse"
        android:background="@drawable/custom_button_border"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnModifierAdresse"
        android:onClick="launchPlacePicker"/>

        <Button
        android:id="@+id/validate"
        android:background="@drawable/custom_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
        android:text="@string/valider" />
    </LinearLayout>

</LinearLayout>
